2003-01-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/winDde.test:
	* win/tclWinDde.c (Tcl_DdeObjCmd): Prevent crash when empty
	service name is passed to 'dde eval' and goto errorNoResult in
	request and poke error cases to free up any allocated data.

2003-01-16  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWin32Dll.c (squelch_warnings): Squelch
	compiler warnings from SEH ASM code.
	* win/tclWinChan.c (squelch_warnings): Squelch
	compiler warnings from SEH ASM code.
	* win/tclWinDde.c: Add casts to avoid compiler
	warnings. Pass pointer to DWORD instead of int
	to avoid compiler warnings.
	* win/tclWinFCmd.c (squelch_warnings): Add casts
	and fixup decls to avoid compiler warnings.
	Squelch compiler warnings from SEH ASM code.
	* win/tclWinFile.c: Add casts and fixup decls
	to avoid compiler warnings. Remove unused variable.
	* win/tclWinNotify.c: Declare as DWORD instead
	of int to avoid compiler warning.
	* win/tclWinReg.c: Add casts to avoid compiler
	warning. Fix assignment in if expression bug.
	* win/tclWinSerial.c: Add casts to avoid compiler
	warnings. Remove unused variable.
	* win/tclWinSock.c: Add casts and fixup decls
	to avoid compiler warnings.

2003-01-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclClock.c (FormatClock): corrected typo that
	incorrectly conditionally defined savedTZEnv and savedTimeZone.

2003-01-13  Mo DeJong  <mdejong@users.sourceforge.net>

	Fix mingw build problems and compiler warnings.

	* generic/tcl.h: Add if defined(__MINGW32__)
	check to code that sets the TCL_WIDE_INT_TYPE
	and TCL_LL_MODIFIER.
	* generic/tclClock.c (FormatClock): Don't
	define savedTimeZone and savedTZEnv if
	we are not going to use them.
	* generic/tclEnv.c: Add cast to avoid warning.
	* win/tclWinChan.c: Use DWORD instead of int
	to avoid compiler warning.
	* win/tclWinThrd.c: Only define allocLock,
	allocLockPtr, and dataKey when TCL_THREADS
	is defined. This avoid a compiler warning
	about unused variables.
